schema for blast command input parameters is changed regarding to requirements